# LastColony

./: .gitignore  LICENSE  README.md  config.gd  icon.svg.import  project.godot
.github/workflows/: rust.yml
godot/: project.godot
godot/extensions/: MainLogic.gdextension  PathFinding.gdextension
godot/pawn/: pawn.gd
godot/scripts/: camera.gd
godot/world/: preset.gd  preset_shape.gd  (+2 more)
pawn/: pawn.gd
rust/main_logic/: Cargo.toml  build-all.sh  build-windows.sh  info.txt  test_save.json
rust/main_logic/src/: gamestate.rs  lib.rs  pathfinder.rs
rust/main_logic/src/entities/: display_tile.rs  housing_registry.rs  pop.rs  pop_collection.rs  tick_result.rs  tile_data.rs
rust/main_logic/src/entities/pop/: class.rs  collection.rs  tick.rs
rust/main_logic/src/entities/world_object/: base.rs  behavior.rs  building_category.rs  class.rs  collection.rs  common_data.rs  factory.rs  id.rs  state.rs  template.rs  tile.rs  tile_library.rs
rust/main_logic/src/entities/world_object/behaviors/: housing.rs  stable.rs
rust/main_logic/src/entities/world_object/data/: common.rs  housing.rs
rust/main_logic/src/entities/world_object/traits/: housing.rs
rust/main_logic/src/entities/world_object/types/housing/: state.rs  template.rs
rust/main_logic/src/enums/: display_behavior.rs  job_type.rs  tile_type.rs  world_object_id.rs
rust/main_logic/src/structures/: weighted_graph.rs
rust/main_logic/src/traits/: serde.rs  to_godot_array.rs
scenes/: title_screen.tscn  world.tscn
scripts/: camera.gd  world.gd
world/: world.gd
world_objects/: state.gd  world_object.gd
(+83 files in other folders)
