[package]
name = "main_logic"
version = "0.1.0"
edition = "2021"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["serde"] }
rayon = "1.10.0"
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"

[lib]
crate-type = ["cdylib"]
